fixed dropdown nav userImg misalignment

--- a/src/Components/Navbar/_Navbar.scss
+++ b/src/Components/Navbar/_Navbar.scss
@@ -98,6 +98,7 @@
   border-radius: 1px;
   background-position: center center; 
   background-size: cover;
+  margin-left: 6px;
 }
 
 .navBtnHB {
